added homepage quote

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <p>1. The fun loving and alternatively enthusiastic person you see before you.</p>
     <p>2. the incomplete skeletal remains of a female hominin found in Hadar, Ethiopia,
       in 1974 and classified as Australopithecus afarensis:
-      she has been dated at about 3.2 million years of age... according to the dictionary.</p>
+      she has been dated at about 3.2 million years of age... according to the dictionary.
+    </p>
+
+    <h3>if its not fun, you're not doing it right. - Bob Basso</h3>
   </body>
 
 
