added lucy definition photo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
   <head>
     <title>Lucy's Portfolio</title>
-    <link rel="stylesheet" href="./styles.css"
+    <link rel="stylesheet" href="./styles.css">
   </head>
 
   <body>
@@ -11,16 +11,7 @@
       alt="picture of Lucy" width="700" height="870"
       >
 
-    <h1>Lucy</h1>
     
-    <h2>[ loo-see ]</h2>
-
-    <p>noun, singular</p>
-    <p>1. The fun loving and alternatively enthusiastic person you see before you.</p>
-    <p>2. the incomplete skeletal remains of a female hominin found in Hadar, Ethiopia,
-      in 1974 and classified as Australopithecus afarensis:
-      she has been dated at about 3.2 million years of age... according to the dictionary.
-    </p>
 
     <h3>if its not fun, you're not doing it right. - Bob Basso</h3>
   </body>
