added lucy definition to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       alt="picture of Lucy" width="700" height="870"
       >
 
-    
+    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-definition.png?raw=true"
+      alt="definition of Lucy text" width="900" height="300"
+      >
 
     <h3>if its not fun, you're not doing it right. - Bob Basso</h3>
   </body>
