added css to nav bar & background-image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <body>
     <header>Lucy Delash - Portfolio</header>
 
+    <nav>
+      <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="news.asp">About</a></li>
+        <li><a href="news.asp">Portfolio</a></li>
+      </ul>
+    </nav>
+
     <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-portfolio-homepage.jpg?raw=true"
       alt="picture of Lucy" width="700" height="870"
       >
@@ -14,8 +22,6 @@
     <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-definition.png?raw=true"
       alt="definition of Lucy text" width="900" height="300"
       >
-
-    <h3>if its not fun, you're not doing it right. - Bob Basso</h3>
   </body>
 
 
