--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <HTML>
   <head>
-    <title>Lucy's Portfolio</title>
+    <title>Welcome to Lucy</title>
     <link rel="stylesheet" href="./styles.css">
   </head>
 
   <body>
-    <header>Lucy Delash - Portfolio</header>
-
+    <header>
     <nav>
       <ul>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="news.asp">About</a></li>
-        <li><a href="news.asp">Portfolio</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
+    </header>
 
     <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-portfolio-homepage.jpg?raw=true"
       alt="picture of Lucy" width="700" height="870"
