added portfolio page pictures

--- a/about.html
+++ b/about.html
@@ -15,4 +15,17 @@
     </nav>
     </header>
 
+    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/portfolio-climbing-picture-about-page.jpg?raw=true"
+    alt="couple hiking together" width="450"
+    ><br>
+
+    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/gaming-portfolio-picture-about-page.jpg?raw=true"
+    alt="fun picture of video games" width="450"
+    ><br>
+
+    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/family-and-friends-picture-portfolio-about-page.jpg?raw=true"
+    alt="friends and family with hands in during a huddle" width="450"
+    >
+
+   </body> 
 </html>
