added lorem ipsum text to about & portfolio pages

--- a/about.html
+++ b/about.html
@@ -18,14 +18,29 @@
     <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/portfolio-climbing-picture-about-page.jpg?raw=true"
     alt="couple hiking together" width="450"
     ><br>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
 
     <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/gaming-portfolio-picture-about-page.jpg?raw=true"
     alt="fun picture of video games" width="450"
     ><br>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
 
     <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/family-and-friends-picture-portfolio-about-page.jpg?raw=true"
     alt="friends and family with hands in during a huddle" width="450"
     >
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
 
    </body> 
 </html>
