removing white background on Lucy definition

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </nav>
     </header>
 
-    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-portfolio-homepage.jpg?raw=true"
+    <container class="lucy-picture"><img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-portfolio-homepage.jpg?raw=true"
       alt="picture of Lucy" width="700" height="870"
       >
-
-    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-definition.png?raw=true"
+      <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-definition.png?raw=true"
       alt="definition of Lucy text" width="900" height="300"
       >
+    </container>  
   </body>
 
 
