flex effects moving pictures to center

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <container class="lucy-picture"><img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-portfolio-homepage.jpg?raw=true"
       alt="picture of Lucy" width="700" height="870"
       >
-      <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/lucy-definition.png?raw=true"
-      alt="definition of Lucy text" width="900" height="300"
+    <section id="lucy-definition"><img src="https://github.com/lucydelash/MyPersonalSite/blob/main/output-onlinepngtools.png?raw=true"
+      alt="definition of Lucy text" width="960" height="300"
       >
+     </section> 
     </container>  
   </body>
 
