--- a/portfolio.html
+++ b/portfolio.html
@@ -14,27 +14,36 @@
   </nav>
   </header>
 
-  <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/climbing-icon-portfolio-page-picture.jpg?raw=true"
-  alt="girl rock climbing" width="450" height="450"
-  ><br>
+  <container id="girl-climbing">
+    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/climbing-icon-portfolio-page-picture.jpg?raw=true"
+    alt="girl rock climbing" width="450" height="450"
+    >
+  </container>
+
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
 
-  <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/bunny-icon-portfolio-page-picture.jpg?raw=true"
-  alt="cute bunny" width="450"
-  ><br>
+  <container id="bunny">
+    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/bunny-icon-portfolio-page-picture.jpg?raw=true"
+    alt="cute bunny" width="450"
+    >
+  </container>
+
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
 
-  <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/pokeball-icon-portfolio-page-picture.jpg?raw=true"
-  alt="pokeball from pokemon" width="450"
-  >
+  <container id="pokeball">
+    <img src="https://github.com/lucydelash/MyPersonalSite/blob/main/pokeball-icon-portfolio-page-picture.jpg?raw=true"
+    alt="pokeball from pokemon" width="450"
+    >
+  </container>
+
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
