added bob basso quote on index

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
       alt="definition of Lucy text" width="960" height="300"
       >
      </section> 
-    </container>  
+    </container> 
+    <!--br for simple push between content-->
+    <br>
+    <br>
+    <br>
+
+    <section id="bob-basso"><p>If it's not fun, you're not doing it right. - Bob Basso</p>
+    </section>
+
   </body>
-
-
-
-
-
 </HTML>
